Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.20
* Fixes for es_AR translation, duplicate keys removed (Andres B)
* Demo templates provide better handling of paragraph breaks in notes (Chris T)

Changelog for 1.3.19
* New link for customer/vendor when not a dropdown (Chris T)
* Removed file debugging code from file.pl (Chris T)
* fixed can void voids. (Chris T, h/t Erik Huelsmann, item 3515561)
* Fixed error on taxable sales report (Chris T, 3531784 h/t Nigel T)
* Added missing localization calls to recon approval workflow (Chris T)
* Clarified recon approval workflow (Chris T)
* Fixed error editing non-existent localized template (Chris T, 3531738)
* Fixed show/hide logic on nav bar on Contacts screen (Chris T)
* Fixed "Post as Shown" button not showing properly on AR/AP drafts (Chris T)
* Added fs_cssdir config option for easier packaging (Chris T, h/t Robert C)
* Fixed discarded input/bad label on 1.2 upgrade screen (Chris T, h/t Robert C)
* Fixed encoding of attachment retrieval (Chris T h/t Erik H)
* Fixed missing grant on partsvendor_entry_id_seq (Chris T, h/t Brian W)
* Fixed voiding invoice duplicates payment (Chris T h/t John L)
* Fixed CSV exports not having any data (Chris T h/t Erik H)
* Fixed menu anomilies due to menu grants on sub-menus (Chris T)

Brian W is Brian Wolf
Chris T is Chris Travers
Erik H is Erik Huelsmann
Nigel T is Nigel Titley
Robert C is Robert James Clay


Changelog for 1.3.18
* Fixed missing template for CSV pricelists (Chris T)
* Added ODS pricelists (Chris T)
* Better CSV escaping (Chris T, h/t Erik H)
* Fixed menu errors preventing quote/rfq template editing (Chris T, 3524793)
* Fixed customer email not showing emailing statements (Chris T and Erik H)
* Approved recon reports no longer show invalid balance info (Chris T,3518283)
* CSS directory is now configurable (Chris T, 3516730, h/t Robert C)
* Corrected cannot delete accounts (Chris T, 3529383, h/t David M)